# vk_bot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  keyboards.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
data/: rent.db
handlers/: __init__.py  callback.py  message.py
models/: __init__.py  inventory.py  item.py  support.py  user_item.py
modules/: __init__.py  bot.py  config.py  database.py  logging.py  redis.py  scheduler.py
utils/: __init__.py  decorator.py  decorators.py  support.py
