[tool.poetry]
name = "vk-bot"
version = "0.1.0"
description = ""
authors = ["SpecteShark <akulenok1200@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.7"
vkbottle = {git = "https://github.com/Pelfox/vkbottle.git", rev = "master"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
