[tool.poetry]
name = "vk-bot"
version = "0.1.0"
description = ""
authors = ["SpecteShark <akulenok1200@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
vkbottle = "^4.3.12"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
